--- a/inst/KvartalsrapportNNRR_v2.Rnw
+++ b/inst/KvartalsrapportNNRR_v2.Rnw
@@ -48,7 +48,7 @@ library(lubridate)
 # 105821 <- 'Levanger'
 # 103736 <- 'Drammen'
 # 700138 <- 'Stavern???'
-reshID <- 102959
+reshID <- 700138
 
 datoTil <- Sys.Date()
 datoTil <- datoTil %>% as.Date() %>% lubridate::floor_date(unit = 'quarter') - lubridate::days(1)
@@ -202,6 +202,9 @@ print(xtable::xtable(samlet, align=c('l', 'l', rep('r', ncol(samlet)-1)),
 
 
 <<'Figur:Aldersfordeling', include=FALSE, echo=FALSE, eval=T, cache=FALSE>>=
+
+
+
 outfile <- paste0(figfolder, "alder.pdf")
 valgtVar <- "PatientAge"
 plotdata <- nnrr::nnrrBeregnAndeler(RegData, valgtVar=valgtVar, datoFra=datoFra_sistkvartal, datoTil=datoTil, enhetsUtvalg=1,
@@ -209,6 +212,12 @@ plotdata <- nnrr::nnrrBeregnAndeler(RegData, valgtVar=valgtVar, datoFra=datoFra_
 nnrr::nnrrSoyleplot(plotdata = plotdata,
                    outfile=outfile)
 
+outfile<-paste0(figfolder, 'VentetidFraHenvisning_fordeling.pdf')
+valgtVar <- "VentetidFraHenvisning_kat"
+plotdata <- nnrr::nnrrBeregnAndeler(RegData, valgtVar=valgtVar, datoFra=datoFra_sistkvartal, datoTil=datoTil, enhetsUtvalg=1,
+               minald=0, maxald=130, erMann=99, reshID=reshID)
+nnrr::nnrrSoyleplot(plotdata = plotdata,
+                   outfile=outfile)
 @
 
 \begin{figure}[ht]
@@ -218,6 +227,16 @@ nnrr::nnrrSoyleplot(plotdata = plotdata,
 \end{figure}
 
 <<'Figur:Tidsvisning', include=FALSE, echo=FALSE, eval=T, cache=FALSE>>=
+
+outfile <- paste0(figfolder, "ventetid_krav.pdf")
+valgtVar <- "ventetid_krav"
+plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                                     minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                                     tidsenhet="Kvartal")
+nnrr::nnrrTidsplot(plotdata = plotdata,
+                   outfile=outfile,
+                   inkl_konf = 0)
+
 outfile <- paste0(figfolder, "andel_tverrfaglig.pdf")
 valgtVar <- "tverrfaglig_behandlet"
 plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
@@ -370,6 +389,12 @@ nnrrFigAndelGrvar(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, 
                   minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
                   grtittel="Behandling i spesialisthelsetjenesten")
 
+outfile <- paste0(figfolder, "fornoyd_gruppert_12mnd.pdf")
+valgtVar <- "fornoyd_12mnd"
+nnrrFigAndelGrvar(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1, datovar="dato_oppfolg2",
+                  minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
+                  grtittel="Behandling i spesialisthelsetjenesten")
+
 outfile <- paste0(figfolder, "opplevd_nytte_beh_gruppert_6mnd.pdf")
 nnrrFigAndelGrvar(RegData, valgtVar="opplevd_nytte_beh_6mnd", datoFra=datoFra,
                   datoTil=datoTil, enhetsUtvalg=1, datovar="dato_oppfolg",
@@ -385,6 +410,17 @@ nnrrFigAndelGrvar(RegData, valgtVar="opplevd_nytte_beh_12mnd", datoFra=datoFra, 
                   grtittel="Behandling i spesialisthelsetjenesten")
 @
 
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}VentetidFraHenvisning_fordeling.pdf}
+\caption{Ventetid i dager fra henvisning til besøk i egen spesialisthelsetjeneste siste kvartal}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}ventetid_krav.pdf}
+\caption{Andel pasienter med 50 dager eller mindre fra henvisning til besøk i egen spesialisthelsetjeneste sammenlignet med landet forøvrig siste 4 kvartal}
+\end{figure}
 
 \begin{figure}[ht]
 \centering
@@ -500,10 +536,20 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_12mnd.pdf}
+\caption{Andel pasienter som 12 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
 \includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert_6mnd.pdf}
 \caption{Andel pasienter som 6 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.  Gruppert etter type behandling.}
 \end{figure}
 
-
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert_12mnd.pdf}
+\caption{Andel pasienter som 12 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.  Gruppert etter type behandling.}
+\end{figure}
 
 \end{document}
