--- a/inst/nnrrIndikatorer.Rnw
+++ b/inst/nnrrIndikatorer.Rnw
@@ -38,45 +38,11 @@ library(tidyverse)
 library(lubridate)
 options(dplyr.summarise.inform = FALSE)
 
-rap_aar <- 2021
-
-pasientsvar_pre <- read.table('~/.ssh/data/nnrr/DataDump_MRS-PROD_Pasientskjema+før+behandling_2022-07-01_1313_redigert.csv',
-                              sep=';', header=T, stringsAsFactors = F, fileEncoding = "Latin1")
-legeskjema <- read.table('~/.ssh/data/nnrr/DataDump_MRS-PROD_Behandlerskjema_2022-07-01_1313.csv', sep=';',
-                         header=T, fileEncoding = 'UTF-8-BOM', stringsAsFactors = F)
-pasientsvar_post <- read.table('~/.ssh/data/nnrr/DataDump_MRS-PROD_Pasientskjema+6+måneder+etter+behandling_2022-07-01_1313.csv',
-                               sep=';', header=T, fileEncoding = 'UTF-8-BOM', stringsAsFactors = F)
-pasientsvar_post2 <- read.table('~/.ssh/data/nnrr/DataDump_MRS-PROD_Pasientskjema+12+måneder+etter+behandling_2022-07-01_1313.csv',
-                                  sep=';', header=T, fileEncoding = 'UTF-8-BOM', stringsAsFactors = F)
-
-flere_hovedskjemaGuid <- names(table(pasientsvar_pre$HovedskjemaGUID))[table(pasientsvar_pre$HovedskjemaGUID)>1]
-pasientsvar_pre <- pasientsvar_pre[!(pasientsvar_pre$HovedskjemaGUID %in% flere_hovedskjemaGuid), ]
+rap_aar <- 2022
 
 icd10 <- read.table('~/.ssh/data/nnrr/icd10.csv', sep=';', header=T, stringsAsFactors = F, fileEncoding = 'UTF-8')
+RegData <- nnrr::nnrrHentRegData()
 
-legeskjema$regstatus <- 1
-pasientsvar_pre$regstatus <- 1
-pasientsvar_post$regstatus <- 1
-pasientsvar_post2$regstatus <- 1
-
-names(pasientsvar_pre)[names(pasientsvar_pre)=='SkjemaGUID'] <- 'SkjemaGUID_pre'
-names(pasientsvar_post)[names(pasientsvar_post)=='SkjemaGUID'] <- 'SkjemaGUID_post'
-names(pasientsvar_post2)[names(pasientsvar_post2)=='SkjemaGUID'] <- 'SkjemaGUID_post2'
-
-RegData <- merge(legeskjema, pasientsvar_pre, by.x = 'SkjemaGUID',
-                 by.y = 'HovedskjemaGUID', suffixes = c('', '_pre'), all.x = TRUE)
-RegData <- merge(RegData, pasientsvar_post, by.x = 'SkjemaGUID',
-                 by.y = 'HovedskjemaGUID', suffixes = c('', '_post'), all.x = TRUE)
-RegData <- merge(RegData, pasientsvar_post2, by.x = 'SkjemaGUID',
-                 by.y = 'HovedskjemaGUID', suffixes = c('', '_post2'), all.x = TRUE)
-
-RegData$DiagnosticNumber1 <- trimws(RegData$DiagnosticNumber1)
-
-# RegData <- nnrr::nnrrPreprosess(RegData = RegData)
-# RegDataAll <- RegData
-# RegData <- RegData[which(RegData$Aar >= rap_aar & RegData$Aar <= rap_aar), ]
-
-RegData <- nnrrPreprosess(RegData = RegData)
 RegDataAll <- RegData
 RegData <- RegData[which(RegData$Aar >= 2015 & RegData$Aar <= rap_aar), ]
 Oppf_data <- RegDataAll[which(RegDataAll$aar_oppfolg>= 2015 & RegDataAll$aar_oppfolg <= rap_aar), ]
@@ -100,7 +66,7 @@ map_resh_orgnr <- data.frame(orgnr_sh = c(974589095, 974749025,
 # kobling_resh_shusnavn[kobling_resh_shusnavn$UnitId %in% setdiff(kobling_resh_shusnavn$UnitId, map_resh_orgnr$resh), ] #sykehus som mangler i mapping
 
 format_ut <- ".pdf"
-figfolder <- "~/nnrr/inst/indikatorer_2021/"
+figfolder <- "~/nnrr/inst/indikatorer_2022/"
 if (!dir.exists(figfolder)) {
   dir.create(figfolder)
 }
@@ -361,45 +327,45 @@ if (format_ut != "pdf") {
 % \caption{Andel tverrfaglig behandlet}
 \end{figure}
 
-<<'Indikator 10: andel tilbake i arbeid', results='asis', echo=FALSE>>=
+% <<'Indikator 10: andel tilbake i arbeid', results='asis', echo=FALSE>>=
+%
+% Oppf_data$arbeid_ikke_besvart <- !(Oppf_data$Working | Oppf_data$SickLeave | Oppf_data$Stay_at_home | Oppf_data$Student |
+%   Oppf_data$Unemployed | Oppf_data$NAV | Oppf_data$Pension | Oppf_data$RetirementPension)
+%
+% aux <- Oppf_data[which(Oppf_data$regstatus==1 & Oppf_data$regstatus_post==1), ]
+%
+% # aux <- aux[which(aux$SickLeave | aux$NAV), ]
+% # aux <- aux[which((aux$SickLeave | aux$NAV) & aux$WorkingPercent != 100), ]
+% aux <- aux[which(aux$SickLeave & aux$WorkingPercent != 100), ] # Ny versjon, mars 2021
+%
+% aux$tilbake_i_arbeid <- 0
+% aux$tilbake_i_arbeid[which(aux$WorkingPercent_post==100 & aux$WorkingStatus == 1)] <- 1
+%
+% ######### Indikator #####################################################################
+% indikator <- aux[, c("UnitId", "Aar", "tilbake_i_arbeid", "SykehusNavn")]
+% names(indikator) <- c('ReshId', 'Aar', 'Teller', "SykehusNavn")
+% indikator$Nevner <- 1
+% indikator$OrgNrShus <- map_resh_orgnr$orgnr_sh[match(indikator$ReshId, map_resh_orgnr$resh)]
+%
+% indikator$ind_id <- "nnrr_jobb"
+% Indikatorer <- bind_rows(Indikatorer, indikator)
+%
+% #########################################################################################
+%
+% tabell1 <- nnrrIndikatorTabell(aux, indikator = 'tilbake_i_arbeid')
+% print(xtable::xtable(tabell1, digits=c(0,0,0,0,0,1), caption='Andel tilbake i fullt arbeid. Utvalget består av alle som det finnes oppfølgingsdata på og er registrert som sykemeldt ved inklusjon. Hvis de i tillegg er registrert som i 100 \\% arbeid ved inklusjon fjernes de fra utvalget. For å regnes som tilbake i fullt arbeid skal de ha registrert å være i 100 \\% arbeid samt arbeidsstatus som Inntektsgivende arbeid.'), include.rownames=FALSE)
+%
+% @
 
-Oppf_data$arbeid_ikke_besvart <- !(Oppf_data$Working | Oppf_data$SickLeave | Oppf_data$Stay_at_home | Oppf_data$Student |
-  Oppf_data$Unemployed | Oppf_data$NAV | Oppf_data$Pension | Oppf_data$RetirementPension)
-
-aux <- Oppf_data[which(Oppf_data$regstatus==1 & Oppf_data$regstatus_post==1), ]
-
-# aux <- aux[which(aux$SickLeave | aux$NAV), ]
-# aux <- aux[which((aux$SickLeave | aux$NAV) & aux$WorkingPercent != 100), ]
-aux <- aux[which(aux$SickLeave & aux$WorkingPercent != 100), ] # Ny versjon, mars 2021
-
-aux$tilbake_i_arbeid <- 0
-aux$tilbake_i_arbeid[which(aux$WorkingPercent_post==100 & aux$WorkingStatus == 1)] <- 1
-
-######### Indikator #####################################################################
-indikator <- aux[, c("UnitId", "Aar", "tilbake_i_arbeid", "SykehusNavn")]
-names(indikator) <- c('ReshId', 'Aar', 'Teller', "SykehusNavn")
-indikator$Nevner <- 1
-indikator$OrgNrShus <- map_resh_orgnr$orgnr_sh[match(indikator$ReshId, map_resh_orgnr$resh)]
-
-indikator$ind_id <- "nnrr_jobb"
-Indikatorer <- bind_rows(Indikatorer, indikator)
-
-#########################################################################################
-
-tabell1 <- nnrrIndikatorTabell(aux, indikator = 'tilbake_i_arbeid')
-print(xtable::xtable(tabell1, digits=c(0,0,0,0,0,1), caption='Andel tilbake i fullt arbeid. Utvalget består av alle som det finnes oppfølgingsdata på og er registrert som sykemeldt ved inklusjon. Hvis de i tillegg er registrert som i 100 \\% arbeid ved inklusjon fjernes de fra utvalget. For å regnes som tilbake i fullt arbeid skal de ha registrert å være i 100 \\% arbeid samt arbeidsstatus som Inntektsgivende arbeid.'), include.rownames=FALSE)
-
-@
-
-<<'Fig. Tilbake i arbeid gml', include=FALSE, echo=FALSE, eval=T>>=
-outfile <- "tilbake_i_arbeid.pdf"
-outfile <- paste0(figfolder, outfile)
-nnrrFigIndikator(indikator, 'Andel tilbake i arbeid', outfile=outfile, maal = 30, minstekrav = 25)
-if (format_ut != "pdf") {
-  outfile <- paste0(substr(outfile, 1, nchar(outfile)-4), format_ut)
-  nnrrFigIndikator(indikator, 'Andel tilbake i arbeid', outfile=outfile, maal = 30, minstekrav = 25)
-}
-@
+% # <<'Fig. Tilbake i arbeid gml', include=FALSE, echo=FALSE, eval=T>>=
+% # outfile <- "tilbake_i_arbeid.pdf"
+% # outfile <- paste0(figfolder, outfile)
+% # nnrrFigIndikator(indikator, 'Andel tilbake i arbeid', outfile=outfile, maal = 30, minstekrav = 25)
+% # if (format_ut != "pdf") {
+% #   outfile <- paste0(substr(outfile, 1, nchar(outfile)-4), format_ut)
+% #   nnrrFigIndikator(indikator, 'Andel tilbake i arbeid', outfile=outfile, maal = 30, minstekrav = 25)
+% # }
+% # @
 
 <<'Indikator 10: andel tilbake i arbeid, forts', results='asis', echo=FALSE>>=
 aux <- Oppf_data[which(Oppf_data$regstatus==1 & Oppf_data$regstatus_post==1), ]
