--- a/inst/KvartalsrapportNNRR_v2.Rnw
+++ b/inst/KvartalsrapportNNRR_v2.Rnw
@@ -93,7 +93,7 @@ Norsk nakke- og ryggregister
 \rule{1.0\textwidth}{1pt}\par   % Horisontal linje
 \vspace{0.5cm}
 % \includegraphics[width=1.0\textwidth]{\Sexpr{system.file(file='smertebilde.PNG', package='nnrr')}} % Inkluder bilde
-\includegraphics[width=1.0\textwidth]{C:/GIT/nnrr/inst/smertebilde.PNG}
+% \includegraphics[width=1.0\textwidth]{C:/GIT/nnrr/inst/smertebilde.PNG}
 \vspace{1pt}\vspace{-\baselineskip}
 {\color{moerkgraa} \small Illustrasjonsbilde}
 \end{center}
