--- a/inst/nnrrIndikatorer.Rnw
+++ b/inst/nnrrIndikatorer.Rnw
@@ -40,7 +40,7 @@ options(dplyr.summarise.inform = FALSE)
 
 rap_aar <- 2022
 
-icd10 <- read.table('C:/GIT/nnrr/doc/icd10.csv', sep=';', header=T, stringsAsFactors = F, fileEncoding = 'UTF-8')
+icd10 <- read.table('~/mydata/nnrr/icd10.csv', sep=';', header=T, stringsAsFactors = F, fileEncoding = 'UTF-8')
 RegData <- nnrr::nnrrHentRegData()
 
 RegDataAll <- RegData
@@ -68,7 +68,7 @@ map_resh_orgnr <- data.frame(orgnr_sh = c(974589095, 974749025,
 # kobling_resh_shusnavn[kobling_resh_shusnavn$UnitId %in% setdiff(kobling_resh_shusnavn$UnitId, map_resh_orgnr$resh), ] #sykehus som mangler i mapping
 
 format_ut <- ".pdf"
-figfolder <- "C:/GIT/nnrr/inst/indikatorer_2022/"
+figfolder <- "~/nnrr/inst/indikatorer_2022/"
 if (!dir.exists(figfolder)) {
   dir.create(figfolder)
 }
@@ -440,11 +440,11 @@ if (format_ut != "pdf") {
 @
 
 
-\begin{figure}[ht]
-\centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}tilbake_i_arbeid.pdf}
-\caption{Andel tilbake i arbeid etter 6 mnd, gammel versjon}
-\end{figure}
+% \begin{figure}[ht]
+% \centering
+% \includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}tilbake_i_arbeid.pdf}
+% \caption{Andel tilbake i arbeid etter 6 mnd, gammel versjon}
+% \end{figure}
 
 \begin{figure}[ht]
 \centering
