--- a/inst/KvartalsrapportNNRR_v2.Rnw
+++ b/inst/KvartalsrapportNNRR_v2.Rnw
@@ -48,7 +48,7 @@ library(lubridate)
 # 105821 <- 'Levanger'
 # 103736 <- 'Drammen'
 # 700138 <- 'Stavern'
-reshID <- 102959
+reshID <- 700138
 
 datoTil <- Sys.Date()
 datoTil <- datoTil %>% as.Date() %>% lubridate::floor_date(unit = 'quarter') - lubridate::days(1)
@@ -276,6 +276,43 @@ nnrr::nnrrTidsplot(plotdata = plotdata,
                    outfile=outfile,
                    inkl_konf = 0)
 
+
+outfile <- paste0(figfolder, "mestringsorientert_samtale.pdf")
+valgtVar <- "mestringsorientert_samtale"
+plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                                     minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                                     tidsenhet="Kvartal")
+nnrr::nnrrTidsplot(plotdata = plotdata,
+                   outfile=outfile,
+                   inkl_konf = 0, maal = 90, moderat = 80)
+
+outfile <- paste0(figfolder, "ind_raad_livsstil.pdf")
+valgtVar <- "ind_raad_livsstil"
+plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                                     minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                                     tidsenhet="Kvartal")
+nnrr::nnrrTidsplot(plotdata = plotdata,
+                   outfile=outfile,
+                   inkl_konf = 0, maal = 90, moderat = 80)
+
+outfile <- paste0(figfolder, "kartlagt_funksjon.pdf")
+valgtVar <- "kartlagt_funksjon"
+plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                                     minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                                     tidsenhet="Kvartal", iArbeid = 1)
+nnrr::nnrrTidsplot(plotdata = plotdata,
+                   outfile=outfile,
+                   inkl_konf = 0, maal = 90, moderat = 80)
+
+outfile <- paste0(figfolder, "gjennomgang_billedfunn.pdf")
+valgtVar <- "gjennomgang_billedfunn"
+plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                                     minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                                     tidsenhet="Kvartal")
+nnrr::nnrrTidsplot(plotdata = plotdata,
+                   outfile=outfile,
+                   inkl_konf = 0, maal = 90, moderat = 80)
+
 # outfile <- paste0(figfolder, "Oppfolging_utfylt_6mnd.pdf")
 # valgtVar <- "Oppfolging_utfylt_6mnd"
 # plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
@@ -448,6 +485,29 @@ nnrrFigAndelGrvar(RegData, valgtVar="opplevd_nytte_beh_12mnd", datoFra=datoFra, 
 \caption{Andel pasienter som er uenig (delvis eller helt) i følgende utsagn: Jeg tror ikke jeg vil være tilbake på det vanlige arbeidet mitt innen tre måneder i egen spesialisthelsetjeneste }
 \end{figure}
 
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}mestringsorientert_samtale.pdf}
+\caption{Andel pasienter som får mestringsorientert samtale.}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}ind_raad_livsstil.pdf}
+\caption{Andel pasienter som får individuell rådgivning vedrørende livsstil og/eller medikamenter.}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}kartlagt_funksjon.pdf}
+\caption{Andel pasienter som får kartlagt funksjonsevne relatert til arbeid og utdannelse blant pasienter som har et arbeidsforhold.}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}gjennomgang_billedfunn.pdf}
+\caption{Andel pasienter som har fått tatt billeddiagnostisikk som får gjennomgang av sine billedfunn.}
+\end{figure}
 
 \clearpage
 
