--- a/inst/nnrrIndikatorer.Rnw
+++ b/inst/nnrrIndikatorer.Rnw
@@ -586,7 +586,7 @@ Indikatorer <- Indikatorer[Indikatorer$year >= 2018, ]
 # Ny variant kommer
 # write.csv2(Indikatorer, paste0('C:/GIT/data/nnrr/nnrr_ind_', Sys.Date(), '.csv'), row.names = F, fileEncoding = "UTF-8")
 
-dg <- readr::read_csv2("C:/GIT/data/nnrr/dg_nnrr_raa.csv",
+dg <- readr::read_csv2("~/mydata/nnrr/dg_nnrr_raa.csv",
                        locale = readr::locale(encoding = "Latin1"),
                        show_col_types = FALSE)
 # dg <- read.csv2("C:/GIT/data/nnrr/dg_nnrr_raa.csv")
@@ -599,7 +599,7 @@ map_dg2 <- data.frame(enhet=c("Sandnessjøen", "St Olavs", "Harstad", "Tromsø",
                       avdresh = c(102169, 104293, 700735, 601032, 4211588, 109834,
                                   4212982, 114174, 102959, 103736, 105821))
 
-dg_ny <- readr::read_csv2("C:/GIT/data/nnrr/Dekningsgrad 2021 NNRR.csv",
+dg_ny <- readr::read_csv2("~/mydata/nnrr/Dekningsgrad 2021 NNRR.csv",
                           locale = readr::locale(encoding = "Latin1"))
 dg_ny$reshid <- map_dg2$avdresh[match(dg_ny$Enhet, map_dg2$enhet)]
 dg_ny$orgnr <- map_resh_orgnr$orgnr_sh[match(dg_ny$reshid, map_resh_orgnr$resh)]
@@ -619,7 +619,7 @@ dg$context <- "caregiver"
 
 Indikatorer <- dplyr::bind_rows(Indikatorer, dg)
 
-write.csv2(Indikatorer, paste0('C:/GIT/data/nnrr/indikatorer_nnrr_', Sys.Date(), '.csv'),
+write.csv2(Indikatorer, paste0('~/mydata/nnrr/indikatorer_nnrr_', Sys.Date(), '.csv'),
            row.names = F, fileEncoding = "UTF-8")
 @
 
